feat: Atualiza README.md com informações detalhadas e formatação aprimorada.